{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 38,
  "lineage": "8b03a381-8ec3-e21f-caf1-f6e14360fc57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0439eb16f9b5218e2",
            "arn": "arn:aws:ec2:us-east-1:387197481860:elastic-ip/eipalloc-0439eb16f9b5218e2",
            "association_id": "eipassoc-04f6eaf612096b14a",
            "domain": "vpc",
            "id": "eipalloc-0439eb16f9b5218e2",
            "instance": "i-0e2a94e23080083ea",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0194288e435e07f4b",
            "private_dns": "ip-10-0-1-129.ec2.internal",
            "private_ip": "10.0.1.129",
            "public_dns": "ec2-52-5-44-112.compute-1.amazonaws.com",
            "public_ip": "52.5.44.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "ytdlp-api-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ytdlp-api-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.api_server",
            "aws_internet_gateway.main",
            "aws_security_group.api_server",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:387197481860:instance/i-0e2a94e23080083ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ytdlp-api-ec2-profile",
            "id": "i-0e2a94e23080083ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ytdlp-api-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0194288e435e07f4b",
            "private_dns": "ip-10-0-1-129.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.129",
            "public_dns": "ec2-13-219-203-19.compute-1.amazonaws.com",
            "public_ip": "13.219.203.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:387197481860:key/6d1e6b58-bcaa-4b3c-af12-f53a0bc24a83",
                "throughput": 125,
                "volume_id": "vol-021f8375595ac3abd",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016c2580219026fde",
            "tags": {
              "Environment": "production",
              "Name": "ytdlp-api-server"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ytdlp-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed2030053526a9cb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.api_server",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387197481860:internet-gateway/igw-0ddc5b48333de4856",
            "id": "igw-0ddc5b48333de4856",
            "owner_id": "387197481860",
            "tags": {
              "Environment": "production",
              "Name": "ytdlp-api-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ytdlp-api-igw"
            },
            "vpc_id": "vpc-05586284acf421cca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387197481860:route-table/rtb-06be71a00fa7fc41a",
            "id": "rtb-06be71a00fa7fc41a",
            "owner_id": "387197481860",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddc5b48333de4856",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "ytdlp-api-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ytdlp-api-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05586284acf421cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b03b341575b0cb87",
            "route_table_id": "rtb-06be71a00fa7fc41a",
            "subnet_id": "subnet-016c2580219026fde"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387197481860:security-group/sg-0ed2030053526a9cb",
            "description": "Security group for ytdlp API server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed2030053526a9cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Server",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ytdlp-api-sg",
            "name_prefix": "",
            "owner_id": "387197481860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ytdlp-api-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ytdlp-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05586284acf421cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387197481860:subnet/subnet-016c2580219026fde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016c2580219026fde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387197481860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ytdlp-api-public-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ytdlp-api-public-subnet"
            },
            "vpc_id": "vpc-05586284acf421cca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387197481860:vpc/vpc-05586284acf421cca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0486be6e45e8361a3",
            "default_route_table_id": "rtb-046b4f71801696606",
            "default_security_group_id": "sg-09ebd1213245067cc",
            "dhcp_options_id": "dopt-04430a10fbe506a3d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05586284acf421cca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046b4f71801696606",
            "owner_id": "387197481860",
            "tags": {
              "Environment": "production",
              "Name": "ytdlp-api-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ytdlp-api-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}